add: ruta para actualizar todas las imagens de los productos al mismo tiempo
